<resources>
    <string name="app_name">Дневник фигуры</string>

    <string name="title_activity_history">История</string>
    <string name="action_main">Главная</string>
    <string name="title_activity_measurement">Замеры</string>
    <string name="title_activity_trend">График</string>

    <string name="add_button">Добвить замер</string>
    <string name="next_measurement_button">Следующие измерения</string>
    <string name="last_measurement_button">Предыдущие измерения</string>


    <string name="action_trend">График</string>
    <string name="action_history">История</string>
    <string name="action_achive">Достижения</string>
    <string name="action_share">Поделиться</string>
    <string name="action_settings">Настройки</string>

    <string name="arm_label">Рука</string>
    <string name="breast_label">Грудь</string>
    <string name="under_breast_label">Под грудью</string>
    <string name="waist_label">Талия</string>
    <string name="belly_label">Живот</string>
    <string name="thigh_label">Бедро</string>
    <string name="leg_label">Нога</string>
    <string name="weight_label">Вес</string>


    <string-array name="questions">
        <item> Измеряем объем груди. </item>
        <item> Измеряем под грудью. </item>
        <item> Измеряем объем талии. </item>
        <item> Измеряем объем живота. </item>
        <item> Измеряем объем бедра. </item>
        <item> Измеряем объем ноги. </item>
        <item> И последнее. Взвешиваемся. </item>
    </string-array>

    <string name="girth_unit">см</string>
    <string name="weight_unit">кг</string>


</resources>
